[package]
name = "apimon"
version = "0.1.0"
edition = "2021"
authors = ["Adam Chalmers <adam.chalmers@kittycad.io>"]
description = "API monitoring tool"
repository = "https://github.com/KittyCAD/apimon"
publish = false
rust-version = "1.70"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autometrics = { version = "0.5.0", features = ["prometheus-client", "prometheus-exporter"] }
bytes = "1.4.0"
camino = { version = "1.1.6", features = ["serde1"] }
hyper = { version = "0.14.27", features = ["server"] }
kittycad = { git = "https://github.com/KittyCAD/kittycad.rs", branch = "main" }
pico-args = "0.5.0"
serde = "1.0.181"
serde_json = "1.0.103"
serde_yaml = "0.9.24"
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = "2.6.1"
slog-term = "2.9.0"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "fs"] }

[build-dependencies]
vergen = { version = "8.2.3", features = ["git", "gitcl"] }
