[package]
name = "apimon"
version = "0.1.0"
edition = "2021"
authors = ["Adam Chalmers <adam.chalmers@kittycad.io>"]
description = "API monitoring tool"
repository = "https://github.com/KittyCAD/apimon"
publish = false
rust-version = "1.72"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
autometrics = { version = "0.6.0", features = ["prometheus-client", "prometheus-exporter"] }
bincode = "1.3.3"
bytes = "1.5.0"
camino = { version = "1.1.6", features = ["serde1"] }
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["server"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
kittycad = { git = "https://github.com/KittyCAD/kittycad.rs", branch = "main" }
pico-args = "0.5.0"
reqwest = "0.11.22"
serde = "1.0.186"
serde_json = "1.0.107"
serde_yaml = "0.9.24"
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = "2.6.1"
slog-term = "2.9.0"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-tungstenite = "0.20.1"
uuid = "1.4.1"

[build-dependencies]
vergen = { version = "8.2.5", features = ["git", "gitcl"] }
